--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 3.14)
 
 project (makegrid C Fortran)
 
+find_package (OpenMP)
+
 add_executable (mgrid ${mgrid_sources})
 add_dependencies (mgrid stell)
 
@@ -9,3 +11,7 @@ target_link_libraries (mgrid stell)
 target_include_directories (mgrid PUBLIC $<TARGET_PROPERTY:stell,BINARY_DIR>)
 
 add_subdirectory (Sources)
+
+if (OpenMP_Found)
+    target_link_libraries (mgrid OpenMP::OpenMP)
+endif
