--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ target_include_directories (mgrid PUBLIC $<TARGET_PROPERTY:stell,BINARY_DIR>)
 
 add_subdirectory (Sources)
 
-if (OpenMP_Found)
+if (OpenMP_Fortran_FOUND)
     target_compile_options (mgrid PUBLIC ${OpenMP_Fortran_FLAGS})
     target_link_libraries (mgrid OpenMP::OpenMP_Fortran)
 endif ()
