--- a/Testing/tests/field_tests/CMakeLists.txt
+++ b/Testing/tests/field_tests/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_test (NAME mgrid_test
-          COMMAND $<TARGET_PROPERTY:mgrid,BINARY_DIR>mgrid coils.test)
+          COMMAND $<TARGET_PROPERTY:mgrid,BINARY_DIR>/mgrid coils.test)
 
