Make the copy file a configure time action. Add check fields tests.

--- a/Testing/tests/field_tests/CMakeLists.txt
+++ b/Testing/tests/field_tests/CMakeLists.txt
@@ -1,6 +1,8 @@
 #  Copy input file from the source to the build directory.
-add_test (NAME    mgrid_copy_test_file
-          COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/coils.test ${CMAKE_CURRENT_BINARY_DIR}/)
+file (COPY        ${CMAKE_CURRENT_SOURCE_DIR}/coils.test
+      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 add_test (NAME    mgrid_test
           COMMAND $<TARGET_PROPERTY:mgrid,BINARY_DIR>/mgrid coils.test)
-
+add_test (NAME    mgrid_check_fields_test
+          COMMAND $<TARGET_PROPERTY:xcheck_fields,BINARY_DIR>/xcheck_fields)
