--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,15 @@ project (makegrid C Fortran)
 find_package (OpenMP)
 
 add_executable (mgrid)
-add_dependencies (mgrid stell)
 
-target_link_libraries (mgrid stell)
-target_include_directories (mgrid PUBLIC $<TARGET_PROPERTY:stell,BINARY_DIR>)
+target_link_libraries (mgrid 
+                       
+                       PUBLIC 
+                       stell
+                       $<$<BOOL:${OpenMP_Fortran_FOUND}>:OpenMP::OpenMP_Fortran>
+)
 
 add_subdirectory (Sources)
-
-if (OpenMP_Fortran_FOUND)
-    target_link_libraries (mgrid OpenMP::OpenMP_Fortran)
-endif ()
 
 ################################################################################
 #  Testing                                                                     #
@@ -22,9 +21,7 @@ endif ()
 
 #  Build test utilities.
 add_executable (xcheck_fields)
-add_dependencies (xcheck_fields stell)
 
-target_link_libraries (xcheck_fields stell)
-target_include_directories (xcheck_fields PUBLIC $<TARGET_PROPERTY:stell,BINARY_DIR>)
+target_link_libraries (xcheck_fields PUBLIC stell)
 
 add_subdirectory (Testing)
